--- a/main.html
+++ b/main.html
@@ -7,7 +7,32 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	 <header>
+            <h1>Signup</h1>
+        </header>
+        <main>
+            <form action="">
+                <label for="text">Name</label> <input type="text" name="fullname" id="name"><br><hr>
+                <label for="text">Email</label> <input type="email" name="email" id="email"><br><hr>
+                <label for="text">Password</label> <input type="password" name="pass" id="password"><br><hr>
+                <label for="text">Laptop Brands</label> <select name="laptop" id="laptop">
+                    <option value="Apple">Apple</option>
+                    <option value="Asus">Asus</option>
+                    <option value="HP">HP</option>
+                </select><br><hr>
+                <label for="text">Age</label> <input type="number" name="age" id="age"> <br><hr>
+                <label for="text">DOB</label> <input type="date" name="DOM" id="DOB"><br><hr>
+                <input type="radio" name="gender" value="Male">
+                <label for="text">Male</label>
+                <input type="radio" name="gender" value="female">
+                <label for="text">female</label>
+                <br><hr>
+                <label for="text">URL website</label> <input type="url" name="website" id="potfolio">
+                <br><hr>
+                <button type="submit" class="btn">Submit</button>
+            </form>
+        </main>
+        <footer></footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
