--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	 <header>
-            <h1>Signup</h1>
+            <h1>Job App Form</h1>
         </header>
         <main>
             <form action="">
@@ -25,7 +25,7 @@
                 <input type="radio" name="gender" value="Male">
                 <label for="text">Male</label>
                 <input type="radio" name="gender" value="female">
-                <label for="text">female</label>
+                <label for="text">Female</label>
                 <br><hr>
                 <label for="text">URL website</label> <input type="url" name="website" id="potfolio">
                 <br><hr>
