--- a/main.html
+++ b/main.html
@@ -13,30 +13,31 @@
         <main>
             <form action="">
                 <label for="text">Name</label>
-                <input type="text" name="fullname" id="name"><br><hr>
+                <input type="text" name="fullname" id="name"><br>
                 <label for="text">Email</label>
-                <input type="email" name="email" id="email"><br><hr><input type="radio" name="gender" value="Male">
+                <input type="email" name="email" id="email"><br>
+		    <input type="radio" name="gender" value="Male">
                 <label for="text">Male</label>
                 <input type="radio" name="gender" value="female">
                 <label for="text">female</label>
-                <br><hr>
+                <br>
 
                 <label for="text">Laptop Brands</label>
                 <select name="laptop" id="laptop">
                     <option value="Apple">Apple</option>
                     <option value="Asus">Asus</option>
                     <option value="HP">HP</option>
-                </select><br><hr>
+                </select><br>
                 <label for="text">Age</label>
                 <input type="number" name="age" id="age">
-                <br><hr>
+                <br>
                 <label for="text">DOB</label>
-                <input type="date" name="DOM" id="DOB"><br><hr>
+                <input type="date" name="DOM" id="DOB"><br>
                 <label for="text">Password</label>
-                <input type="password" name="pass" id="password"><br><hr>
+                <input type="password" name="pass" id="password"><br>
                 <label for="text">URL website</label>
                 <input type="url" name="website" id="potfolio">
-                <br><hr>
+                <br>
 
                 <button type="submit" class="btn">Submit</button>
             </form>
