--- a/main.html
+++ b/main.html
@@ -12,7 +12,10 @@
         </header>
         <main>
             <form action="#" method="post">
-               <label for="name">Name <input type="text" name="name" id="name" placeholder="Name" required></label><br>
+               <label for="name">
+            Name*
+            <input type="text" id="name" placeholder="Name" required>
+        </label><br>
                <label for="email">Email <input type="email" name="email" id="email" placeholder="Email" required></label><br>
 
                 <input type="radio" name="gender" value="Male" required>
