--- a/main.html
+++ b/main.html
@@ -54,8 +54,7 @@
         <label for="portfolio">
             Portfolio Link*
             <input type="text" name="portfolio" id="portfolio" required>
-        </label>
-        <input type="submit">
+       <button type="submit" class="btn">Submit</button>
     </form>
 
         </main>
