--- a/main.html
+++ b/main.html
@@ -53,7 +53,7 @@
         </label>
         <label for="portfolio">
             Portfolio Link*
-            <input type="text" name="portfolio" id="portfolio" required>
+            <input type="url" name="portfolio" id="portfolio" required>
        <button type="submit" class="btn">Submit</button>
     </form>
 
